CAMEL-10141: make camel-cdi tests pass on Java 9